--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2037,6 +2037,10 @@
     text-align: center;
   }
 
+  .person > a {
+    border: 0;
+  }
+
   .person img {
     height: 150px;
     width: 150px;
