--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1325,11 +1325,16 @@
 
 /* Basic */
 
+  html {
+    height: 100%;
+  }
+
   @-ms-viewport {
     width: device-width;
   }
 
   body {
+    height: 100%;
     background: #F8F8F8;
     font-family: 'Campton-LightDEMO', sans-serif;
     font-weight: 300;
@@ -1953,19 +1958,28 @@
 /* Header */
 
   #header {
+    height: 100%;
     position: relative;
     margin: 0;
-        background: #EB1E23;
-        /*
-    background-image: url("images/overlay.png"), url("../../images/header.jpg");
-    background-size: auto, cover;
-    background-position: top left, center center;
-    background-repeat: repeat, no-repeat;
-        */
+    background: #e70e00;
+
     padding: 14em 0 14em 0;
     text-align: center;
     color: #fff;
   }
+
+    #header header {
+      display: inline-block;
+      width: 75%;
+      height: 0;
+      padding-top: 30%;
+      margin: 0 auto;
+
+      background-image: url("../../images/logo.png");
+      background-size: contain;
+      background-position: center center;
+      background-repeat: no-repeat;
+    }
 
     #header header h1 {
       font-size: 2.25em;
@@ -1998,6 +2012,13 @@
       font-weight: 400;
     }
 
+    .main#lead-section > div {
+      background-image: url(../../images/lattice.png);
+      background-size: contain;
+      background-position: 15% center;
+      background-repeat: no-repeat;
+    }
+
     .main#feature-section,
     .main#supporters {
       text-align: center;
@@ -2018,12 +2039,13 @@
       /* white/gray panel */
       .main > .content.style0 {
         background: #f8f8f8;
-        border: 20px solid white;
+        border-left: 20px solid white;
+        border-right: 20px solid white;
       }
 
       /* green panel */
       .main > .content.style1 {
-        background: #00A096;
+        background: #008e8a;
       }
 
       /* black panel */
@@ -2181,6 +2203,12 @@
         margin: 0 !important;
       }
 
+        .main#lead-section > div {
+          background-image: url(../../images/lattice-bg.png);
+          background-size: cover;
+          background-position: center;
+        }
+
         .main > header {
           padding: 3.5em 2em 3.5em 2em;
         }
@@ -2241,8 +2269,6 @@
     /* Button */
 
       .button {
-        padding-left: 0;
-        padding-right: 0;
         width: 100%;
         max-width: 300px;
       }
@@ -2270,10 +2296,6 @@
       #header {
         padding: 6em 20px 6em 20px;
       }
-
-        #header > header {
-          padding: 0 1em 0 1em;
-        }
 
     /* Main Sections */
 
