--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@
   src: local('☺'), url('../fonts/Campton-BoldDEMO.woff') format('woff'), url('../fonts/Campton-BoldDEMO.ttf') format('truetype'), url('../fonts/Campton-BoldDEMO.svg') format('svg');
   font-weight: normal;
   font-style: normal;
+  unicode-range: U+20-21, U+24-26, U+28-29, U+2C-2E, U+30-3B, U+3F-5A, U+61-7A;
 }
 
 @font-face {
@@ -14,6 +15,7 @@
   src: local('☺'), url('../fonts/Campton-LightDEMO.woff') format('woff'), url('../fonts/Campton-LightDEMO.ttf') format('truetype'), url('../fonts/Campton-LightDEMO.svg') format('svg');
   font-weight: normal;
   font-style: normal;
+  unicode-range: U+20-21, U+24-26, U+28-29, U+2C-2E, U+30-3B, U+3F-5A, U+61-7A;
 }
 
 
