--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1964,8 +1964,8 @@
     position: relative;
     margin: 0;
     background: #e70e00;
-    background-image: url("../../images/logo.png");
-    background-size: contain;
+    background-image: url("../../images/logo.png"), url("../../images/background.jpg");
+    /*background-size: contain;*/
     background-position: center center;
     background-repeat: no-repeat;
 
