--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1965,7 +1965,7 @@
     margin: 0;
     background: #e70e00;
     background-image: url("../../images/logo.png"), url("../../images/background.jpg");
-    /*background-size: contain;*/
+    background-size: contain, cover;
     background-position: center center;
     background-repeat: no-repeat;
 
