--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1981,6 +1981,23 @@
       text-align: center;
     }
 
+/* Youtube Reflexive */
+.vid-container {
+    position: relative;
+    padding-bottom: 50%;
+    padding-top: 35px; height: 0; overflow: hidden;
+}
+
+.vid-container iframe,
+.vid-container object,
+.vid-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 /* Main Sections */
 
   .main {
