--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1502,7 +1502,6 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background: url("images/overlay.png");
     }
 
     .image img {
@@ -2016,7 +2015,15 @@
       background-repeat: no-repeat;
     }
 
-    .main#feature-section,
+    .main#feature-section > div {
+      text-align: center;
+      background-image: url("../../images/background2.jpg");
+      background-size: contain, cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size:100% 100%;
+
+    }
     .main#supporters {
       text-align: center;
     }
