--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2056,7 +2056,7 @@
 
       /* green panel */
       .main > .content.style1 {
-        background: #008e8a;
+        background: #333;
       }
 
       /* black panel */
